@startuml
'https://plantuml.com/class-diagram

abstract class Pizza{
    prepare(): void
    bake(): void
    cut(): void
    box(): void
}
class MeatPizza
class VegetablePizza
class OrderPizza{
    orderPizza(): void
    getType(): String
}
class SimpleFactory{
    producingPizza(String type): Pizza
}

Pizza <|-- MeatPizza
Pizza <|-- VegetablePizza
OrderPizza o-- SimpleFactory
SimpleFactory --> Pizza
SimpleFactory --> MeatPizza
SimpleFactory --> VegetablePizza


@enduml